Creating and modified tictactoeRun.js for ending the game!

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 ﻿<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
     <title>TicTacToe using Flex </title>
     <link rel="stylesheet" href="style.css">
-    <script src="tictactoe.js"></script>
-    <script src="tictactoeUI.js"></script>
+
 </head>
-<body >    
+
+<body>
     <main id="root">
         <header>
             <h2>TicTacToe</h2>
@@ -26,4 +27,7 @@
         <footer id="gameStatusTag"></footer>
     </main>
 </body>
+
+<script src="tictactoe.js"></script>
+<script src="tictactoeRun.js"></script>
 </html>
